# VE475

g2/g2team08/: .gitattributes  .gitignore  Cargo.toml  README.md  test.py
g2/g2team08/secrets/cipher1/: ciphertext.txt  key.txt  plaintext.txt
g2/g2team08/secrets/cipher2/: ciphertext.txt  key.txt  plaintext.txt
g2/g2team08/src/: cli.rs  lib.rs  test.rs  traits.rs
g2/g2team08/src/cipher1/: Makefile  README.md  cipher.rs
g2/g2team08/src/cipher2/: Makefile  README.md  cipher.rs
greeting/src/: main.rs
h1/: Cargo.toml
h1/src/: main.rs
h3/: Cargo.toml
h3/src/: main.rs
h5/: Cargo.toml
h5/src/: main.rs
h6/: Cargo.toml  h6_ex6.tar
h6/src/: main.rs
