[package]
name = "g2"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
rand = "0.9.1"
bytes = "1.10.1"
cipher = { version = "0.4.4", features = [
  "block-padding",
  "rand_core",
  "std",
  "dev",
  "zeroize",
] }
regex = "1.11.1"
clap = { version = "4.3.12", features = ["derive"] }
once_cell = "1.19.0"
zeroize = "1.8.1"

[[bin]]
name = "cipher1"

[[bin]]
name = "cipher2"
